# MakeMyRecipe

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo_enhanced_search.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
.openhands/: setup.sh
.openhands/microagents/: repo.md
src/makemyrecipe/: __init__.py
src/makemyrecipe/api/: main.py  middleware.py
src/makemyrecipe/api/routes/: chat.py  recipe.py  websocket.py
src/makemyrecipe/core/: config.py  logging.py
src/makemyrecipe/models/: __init__.py  chat.py  recipe.py
src/makemyrecipe/services/: __init__.py  anthropic_service.py  chat_service.py  conversation_persistence.py  llm_service.py  recipe_service.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: conftest.py  test_anthropic_service.py  test_api_chat.py  test_chat_api_citations.py  test_conversation_persistence.py  test_e2e_chat_interface.py  test_e2e_enhanced_recipe_search.py  test_enhanced_recipe_api.py  test_enhanced_recipe_models.py  test_enhanced_recipe_service.py  test_frontend_integration.py  test_llm_service_anthropic.py  test_markdown_rendering.py  test_recipe_api.py  test_recipe_service.py  test_search_tag_functionality.py  test_services.py  test_websocket.py
tests/integration/: test_app_startup.py  test_recipe_integration.py
tests/unit/: test_api.py  test_config.py
